--- a/style.css
+++ b/style.css
@@ -17,8 +17,44 @@ body{
 .flexwork{
  display:grid;
  grid-template-columns: 2fr 1fr 1fr 2fr;
- grid-template-rows: 1fr 3fr 1fr;
-
+ grid-template-rows: 1fr 2fr 1fr;
+}
+/* button code modified, thank you https://codepen.io/derekmorash/pen/XddZJY */
+/* //BUTTON 1 */
+button {
+    box-sizing: border-box;
+    appearance: none;
+    background-color: black;
+    opacity: 70%;
+    border: 2px solid red;
+    border-radius: 0.6em;
+    color: red;
+    cursor: pointer;
+    display: flex;
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 10px;
+    padding: 1em 2em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+  
+    &:hover,
+    &:focus {
+      color: #fff;
+      outline: 0;
+    }
+  }
+  
+#fight {
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+  &:hover {
+    box-shadow: 0 0 40px 40px red inset;
+  }
 }
 
 
