--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 /* went on google and downloaded background and posted code to make it the back */
 html { 
+  max-width: fit-content;
+  max-height: fit-content;
     background: url(/background/backgroundphoto.jpeg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     background: opacity(10%);
+
   }
 body{
 	padding: 0;
@@ -17,7 +20,9 @@ body{
 .flexwork{
  display:grid;
  grid-template-columns: 2fr 1fr 1fr 2fr;
- grid-template-rows: 1fr 2fr 1fr;
+ grid-template-rows: 2fr 3fr 1;
+ justify-items: center;
+ align-items: end;
 }
 /* button code modified, thank you https://codepen.io/derekmorash/pen/XddZJY */
 /* //BUTTON 1 */
@@ -65,7 +70,8 @@ COPIED CASTLE BASIC COLUM/ROOF ONLINE AND MODIFIED width/heigh/color/shape
 
 height: 100vh;
 width: 100px;
-    
+    align-self: end;
+    justify-content: center;
 }
 
 .firstcolumn{
@@ -129,6 +135,10 @@ h3{text-align: center;}
   height: 300px;
   display: block;
   position: relative;
+align-items: flex-end;
+align-self: end;
+
+
 }
 
 .head {
@@ -258,8 +268,16 @@ h3{text-align: center;}
     top: 0px;
     z-index: 1;
     display:none;
+    background-color: red ;
+    color:navy;
+
   }
 
   #box6{
 align-items: end;
-  }
+justify-content: center;
+ }
+ 
+ .buymenu{
+  background-color: DodgerBlue;
+ }
