--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /* went on google and downloaded background and posted code to make it the back */
 html { 
-  max-width: fit-content;
-  max-height: fit-content;
+  margin: auto;
+  max-width: 1200px;
+  max-height: 800px;
+  resize: both;
     background: url(/background/backgroundphoto.jpeg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -20,7 +22,7 @@ body{
 .flexwork{
  display:grid;
  grid-template-columns: 2fr 1fr 1fr 2fr;
- grid-template-rows: 2fr 3fr 1;
+ grid-template-rows: 1fr 3fr 1 ;
  justify-items: center;
  align-items: end;
 }
