--- a/style.css
+++ b/style.css
@@ -282,3 +282,30 @@ justify-content: center;
  .buymenu{
   background-color: DodgerBlue;
  }
+
+ .label1{        width: 100px;
+  height: 100px;
+  border: 8px solid black;
+  display: block;
+  position: absolute;
+  top: 108px;
+  left: 17px;
+  font-weight: 900;
+  text-align: center;
+  text-size-adjust: auto;
+  font-size: large;
+
+}
+.label2{        width: 100px;
+  height: 100px;
+  border: 8px solid black;
+  display: block;
+  position: absolute;
+  top: 108px;
+  right: 17px;
+  font-weight: 900;
+  text-align: center;
+  text-size-adjust: auto;
+  font-size: large;
+
+}
