--- a/style.css
+++ b/style.css
@@ -196,8 +196,8 @@ h3{text-align: center;}
   position: absolute;
   top: 109px;
   left: 161px;
-  animation: wave2 1s alternate infinite ease-in-out;
-  transform-origin: 0%;
+  /* animation: wave2 1s alternate infinite ease-in-out;
+  transform-origin: 0%; */
 }
 
 /* @keyframes wave2 {
@@ -236,11 +236,24 @@ h3{text-align: center;}
   border: 5px solid black;
   display: block;
   position: absolute;
-  top: 74px;
-  left: 198px;
+  top: 75px;
+  left: 192px;
   transform: rotate(90deg);
   -webkit-box-reflect: above 95px;
+  animation: wave2 1s alternate infinite ease-in-out;
+  /* transform-origin: 0%; */
+  
 }
+ @keyframes wave2 {
+  0% {
+    transform: rotate(86deg);
+    width:110px;
+  }
+  100% {
+    transform: rotate(94deg);
+    width: 150px;
+  }
+} 
 /* learned z index and copied code/modified to work */
 #rulemodal{
     position: absolute;
