--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@ html {
 body{
 	padding: 0;
 	margin: 0;
-    /* display:flex;
-    flex-direction: column;  */
 }
 
 .flexwork{
@@ -243,7 +241,7 @@ h3{text-align: center;}
   animation: wave2 1s alternate infinite ease-in-out;
   /* transform-origin: 0%; */
   
-}
+/* }
  @keyframes wave2 {
   0% {
     transform: rotate(86deg);
@@ -251,7 +249,7 @@ h3{text-align: center;}
   }
   100% {
     transform: rotate(94deg);
-    width: 150px;
+    width: 150px; */
   }
 } 
 /* learned z index and copied code/modified to work */
@@ -307,6 +305,5 @@ h3{text-align: center;}
   text-size-adjust: auto;
   font-size: large;
 }
-
 .buyBts{
 }
